# adventofcode2024

./: adventofcode2024.cabal  day01.lhs  day02.lhs  day03.lhs  day04.lhs  day05.lhs  day06.lhs  day07.lhs  day08.lhs  day09.lhs  day10.hs  day10.lhs  day11.hs  day11.lhs  day12.hs  day12.lhs  day13.hs  day13.lhs  day14.hs  day14.lhs  day15.hs  day15.lhs  day16.hs  day16.lhs  day17.hs  day17.lhs  day18.hs  day18.lhs  day19.hs  day19.lhs  day19.pl  day20.hs  day20.lhs  day21.hs  day22.hs  day23.hs  day24a.hs  day24b.pl  day25.hs  stack.yaml
