cabal-version: 2.2
name:           adventofcode2024
version:        2024
author:         Jean-Baptiste Mazon
copyright:      2024
build-type:     Simple

common deps
  build-depends: base
  default-language: Haskell2010
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints

executable day01
  import: deps
  main-is: day01.lhs
  ghc-options: -Wno-incomplete-patterns

executable day02
  import: deps
  main-is: day02.lhs

executable day03
  import: deps
  main-is: day03.lhs
  build-depends: megaparsec
  default-extensions: LambdaCase

executable day04
  import: deps
  main-is: day04.lhs
  build-depends: array, linear

executable day05
  import: deps
  main-is: day05.lhs
  build-depends: containers, split
  ghc-options: -Wno-incomplete-uni-patterns

executable day06
  import: deps
  main-is: day06.lhs
  build-depends: array, linear
  default-extensions: FlexibleInstances
  ghc-options: -Wno-incomplete-uni-patterns

executable day07
  import: deps
  main-is: day07.lhs
  ghc-options: -Wno-incomplete-uni-patterns -Wno-incomplete-patterns

executable day08
  import: deps
  main-is: day08.lhs
  build-depends: array, containers, linear
  default-extensions: TupleSections

executable day09
  import: deps
  main-is: day09.lhs
  build-depends: array, fingertree
  default-extensions: FlexibleContexts,FlexibleInstances,LambdaCase,MultiParamTypeClasses

executable day10
  import: deps
  main-is: day10.lhs
  build-depends: array, containers, linear

executable day11
  import: deps
  main-is: day11.lhs
  build-depends: containers, mtl
  default-extensions: LambdaCase

executable day12
  import: deps
  main-is: day12.lhs
  build-depends: array, equivalence, mtl
  default-extensions: FlexibleContexts
