cabal-version: 2.2
name:           adventofcode2024
version:        2024
author:         Jean-Baptiste Mazon
copyright:      2024
build-type:     Simple

common deps
  build-depends: base
  default-language: Haskell2010
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints

executable day01
  import: deps
  main-is: day01.lhs
  ghc-options: -Wno-incomplete-patterns

executable day02
  import: deps
  main-is: day02.lhs

executable day03
  import: deps
  main-is: day03.lhs
  build-depends: megaparsec
  default-extensions: LambdaCase

executable day04
  import: deps
  main-is: day04.lhs
  build-depends: array, linear

executable day05
  import: deps
  main-is: day05.lhs
  build-depends: containers, split
  ghc-options: -Wno-incomplete-uni-patterns

executable day06
  import: deps
  main-is: day06.lhs
  build-depends: array, linear
  default-extensions: FlexibleInstances
  ghc-options: -Wno-incomplete-uni-patterns

executable day07
  import: deps
  main-is: day07.lhs
  ghc-options: -Wno-incomplete-uni-patterns -Wno-incomplete-patterns

executable day08
  import: deps
  main-is: day08.lhs
  build-depends: array, containers, linear
  default-extensions: TupleSections

executable day09
  import: deps
  main-is: day09.lhs
  build-depends: array, fingertree
  default-extensions: FlexibleContexts,FlexibleInstances,LambdaCase,MultiParamTypeClasses

executable day10
  import: deps
  main-is: day10.lhs
  build-depends: array, containers, linear

executable day11
  import: deps
  main-is: day11.lhs
  build-depends: containers, mtl
  default-extensions: LambdaCase

executable day12
  import: deps
  main-is: day12.lhs
  build-depends: array, equivalence, mtl
  default-extensions: FlexibleContexts

executable day13
  import: deps
  main-is: day13.lhs
  build-depends: linear, split
  default-extensions: PatternSynonyms,ViewPatterns

executable day14
  import: deps
  main-is: day14.lhs
  build-depends: arithmoi
  default-extensions: DataKinds,LambdaCase,ScopedTypeVariables,TypeApplications

executable day15
  import: deps
  main-is: day15.lhs
  build-depends: array, containers, mtl, transformers
  default-extensions: AllowAmbiguousTypes,FlexibleContexts,LambdaCase,ScopedTypeVariables,TypeApplications
  ghc-options: -Wno-incomplete-patterns -Wno-incomplete-uni-patterns

executable day16
  import: deps
  main-is: day16.lhs
  build-depends: array, containers, linear
  default-extensions: RecordWildCards

executable day17
  import: deps
  main-is: day17.lhs
  build-depends: lens, sbv
  default-extensions: DataKinds,TemplateHaskell
  ghc-options: -Wno-incomplete-patterns -Wno-incomplete-uni-patterns

executable day18
  import: deps
  main-is: day18.lhs
  build-depends: containers,equivalence,lens,linear
  default-extensions: LambdaCase,TupleSections

executable day19
  import: deps
  main-is: day19.hs
  build-depends: array

executable day20
  import: deps
  main-is: day20.lhs
  build-depends: array, containers, linear
  default-extensions: MultiWayIf, TupleSections

executable day21
  import: deps
  main-is: day21.hs
  build-depends: array, containers, lens, linear, data-memocombinators, split
  default-extensions: TupleSections

executable day22
  import: deps
  main-is: day22.hs
  build-depends: containers

executable day23
  import: deps
  main-is: day23.hs
  build-depends: containers

executable day24
  import: deps
  main-is: day24a.hs
  build-depends: containers

executable day25
  import: deps
  main-is: day25.hs
  build-depends: split
  default-extensions: TypeApplications
